--- a/frontend/css/style.css
+++ b/frontend/css/style.css
@@ -27,15 +27,15 @@ body {
 
 .header {
 	display: flex;
-	justify-content: space-between;
+	justify-content: space-around;
 	align-items: center;
-	padding: 15px;
+	padding: 10px 0 10px 0;
 	background: rgba(0, 0, 0, 0.1);
 }
 
 .link {
 	display: flex;
-	gap: 10px;
+	gap: 50px;
 }
 
 .link button {
@@ -49,57 +49,6 @@ body {
 .link button:hover {
 	text-decoration: underline;
 }
-
-#open-modal-btn {
-	padding: 8px 15px;
-	border: none;
-	border-radius: 5px;
-	cursor: pointer;
-	font-size: 16px;
-	background: white;
-}
-
-.modal {
-	display: none;
-	position: fixed;
-	top: 50%;
-	left: 50%;
-	transform: translate(-50%, -50%);
-	background: white;
-	padding: 20px;
-	border-radius: 10px;
-	box-shadow: 0 0 15px rgba(0, 0, 0, 0.3);
-	min-width: 300px;
-}
-
-.modal-content {
-	text-align: center;
-}
-
-.modal input {
-	width: 90%;
-	padding: 8px;
-	margin: 5px 0;
-	border: 1px solid #ccc;
-	border-radius: 5px;
-}
-
-.modal button {
-	width: 100%;
-	padding: 8px;
-	border: none;
-	background: #4f33b0;
-	color: white;
-	border-radius: 5px;
-	cursor: pointer;
-	font-size: 16px;
-}
-
-.modal button:hover {
-	background: #371e8a;
-}
-
-
 
 .container {
 	height: 100vh;
@@ -136,25 +85,10 @@ body {
 	height: 3px;
 }
 
-button {
-	height: 60px;
-	width: 60px;
-	border: 0;
-	border-radius: 30px;
-	margin: 5px;
-	font-size: 20px;
-	cursor: pointer;
-	transition: all 200ms ease;
-}
-
 button:hover {
 	transform: scale(1.1);
+	cursor: pointer;
 }
-
-button#equal {
-	height: 130px;
-}
-
 
 .calculator {
 	background-color: #071115;
@@ -172,14 +106,89 @@ button#equal {
 .calculator button.btn-number {
 	background-color: #1b2f38;
 	color: #f8fafb;
+	height: 60px;
+	width: 60px;
+	border: 0;
+	margin: 5px;
+	font-size: 20px;
+	transition: all 200ms ease;
 }
 
 .calculator button.btn-operator {
 	background-color: #2e1f39;
-	color: #aa00a4;
+	color: #f8fafb;
+	border: 0;
+	margin: 5px;
+	height: 60px;
+	width: 60px;
 }
 
 .calculator button.btn-equal {
 	background-color: #223323;
 	color: #ffffff;
+	height: 130px;
+	width: 60px;
+	margin: 5px;
+	border: 0;
+}
+
+.modal {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%) scale(0);
+  transition: 200ms ease-in-out;
+  border: 1px solid black;
+  border-radius: 10px;
+  z-index: 10;
+  background-color: white;
+  width: 500px;
+  max-width: 80%;
+}
+
+.modal.active {
+  transform: translate(-50%, -50%) scale(1);
+}
+
+.modal-header {
+  padding: 10px 15px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  border-bottom: 1px solid black;
+}
+
+.modal-header .title {
+  font-size: 1.25rem;
+  font-weight: bold;
+}
+
+.modal-header .close-button {
+  cursor: pointer;
+  border: none;
+  outline: none;
+  background: none;
+  font-size: 1.25rem;
+  font-weight: bold;
+}
+
+.modal-body {
+  padding: 10px 15px;
+}
+
+#overlay {
+  position: fixed;
+  opacity: 0;
+  transition: 200ms ease-in-out;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: rgba(0, 0, 0, .5);
+  pointer-events: none;
+}
+
+#overlay.active {
+  opacity: 1;
+  pointer-events: all;
 }
